2009-03-25  John W. Eaton  <jwe@octave.org>

	* Makefile.in (%.df : %.cc): Write source file name to output,
	wrapped in XDEFUN_FILE_NAME macro.
	* mkbuiltins: Provide definition for XDEFUN_FILE_NAME.
	* mkgendoc: Likeiwse.
	(XDEFUN_DLD_INTERNAL, XDEFUNX_DLD_INTERNAL, XDEFUN_INTERNAL,
	XDEFCONSTFUN_INTERNAL, XDEFUNX_INTERNAL, XDEFVAR_INTERNAL,
	XDEFCONST_INTERNAL): Pass file_name to print_doc_string.
	(print_doc_string): New arg, FILE_NAME.  Print file name as
	comment.

2009-03-24  John W. Eaton  <jwe@octave.org>

	* ov-class.cc (F__parent_classes__): New function.

2009-03-24  Robert T. Short  <octave@phaselockedsystems.com>

	* ov-class.h, ov-class.cc (octave_class::octave_class (const
	Octave_map&, const std::string&, const octave_value_list&)):
	New constructor.
	(octave_class::find_parent_class, octave_class::parent_classes):
	New functions.
	(octave_class::dotref): Also look in parent class.
	(Fclass): Handle parent class arguments.

	* ov-base.h (octave_base_value::get_parent_list,
	octave_base_value::parent_classes): New virtual functions.

	* load-path.h, load-path.cc (load_path::parent_map): New data member. 
	(load_path::add_to_parent_map): New static function.
	(load_path::do_add_to_parent_map): New member function.
	(load_path::do_find_method): Also look in parent classes for methods.
	(load_path::parent_map_type, load_path::const_parent_map_iterator,
	load_path::parent_map_iterator): New typedefs.

2009-03-23  John W. Eaton  <jwe@octave.org>

	* symtab.h
	(symbol_table::symbol_record::symobl_recoord_rep::is_variable):
	Also return true if symbol is tagged as a variable.
	(symbol_table::symbol_record::symobl_recoord_rep::force_variable):
	Don't set variable value.
	(symbol_table::symbol_record::symobl_recoord_rep::clear_forced,
	symbol_table::symbol_record::clear_forced): Delete.
	(symbol_table::unmark_forced_variables): Rename from
	symbol_table::clear_forced_variables.
	(symbol_table::do_unmark_forced_variables): Rename from